# neuragram

./: CLAUDE.md  README.md  README_CN.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
benchmarks/: longmemeval_bench.py
examples/: lifecycle_demo.py  multi_user.py  quickstart.py
src/engram/: __init__.py  client.py
src/engram/core/: access.py  config.py  models.py  telemetry.py
src/engram/integrations/: langchain.py  llamaindex.py
src/engram/lifecycle/: decay.py  forgetting.py  worker.py
src/engram/processing/: classifier.py  conflict.py  embeddings.py  extraction.py  llm.py  merger.py
src/engram/retrieval/: engine.py  scoring.py
src/engram/server/: api.py  mcp.py
src/engram/store/: base.py  registry.py  sqlite.py
src/neuragram/: __init__.py  client.py
src/neuragram/core/: access.py  config.py  exceptions.py  filters.py  telemetry.py
src/neuragram/integrations/: langchain.py  llamaindex.py
src/neuragram/lifecycle/: decay.py  forgetting.py  worker.py
src/neuragram/processing/: classifier.py  conflict.py  embeddings.py  extraction.py  llm.py  merger.py
src/neuragram/retrieval/: engine.py  scoring.py
src/neuragram/server/: api.py  mcp.py
src/neuragram/store/: base.py  registry.py  sqlite.py
tests/: conftest.py  test_client.py  test_lifecycle.py  test_models.py  test_phase2.py  test_phase3.py  test_phase4.py  test_production.py  test_retrieval.py  test_store_sqlite.py
