[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuragram"
version = "1.0.0"
description = "A lightweight, standalone, framework-agnostic agent memory library — the SQLite of agent memory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Engram Team", email = "upbeat_2026@qq.com" },
]
keywords = ["agent", "memory", "llm", "ai", "vector-search", "rag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "sqlite-vec>=0.1.1",
    "numpy>=1.24",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.2.0"]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.1.0"]
pg = ["asyncpg>=0.29", "pgvector>=0.2"]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.100", "uvicorn>=0.20"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "coverage>=7.0",
]
all = ["neuragram[local,openai,ollama,mcp,api,langchain,llamaindex,telemetry]"]

[project.scripts]
neuragram-mcp = "neuragram.server.mcp:main"
neuragram-api = "neuragram.server.api:main"

[project.urls]
Homepage = "https://github.com/flowerbear97/neuragram"
Repository = "https://github.com/flowerbear97/neuragram"
Documentation = "https://github.com/flowerbear97/neuragram#readme"
Issues = "https://github.com/flowerbear97/neuragram/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neuragram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
